changed committee spread to next image Issues: image gets center aligned and styling is inline will fix this soon

--- a/styles/components/CommitteeSpread.scss
+++ b/styles/components/CommitteeSpread.scss
@@ -52,7 +52,7 @@
         font-size: 0.8em;
         left: 72px;
         margin: 0;
-        margin-top: -5px;
+        margin-top: -25px;
         position: absolute;
         top: 75px;
         vertical-align: top;
